5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1642_2449.log
== TEST (2019-04-22 18:12:09) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d

 x = cimax/baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d

y = cimay/baixoy

print(x)
print(y)


-- ERROR:
File "XXXX", line 12
    x = cimax/baixox
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:12:38) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d

x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d

y = cimay / baixoy

print(x)
print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = cimax / baixox
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:14:16) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d

x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d

y = cimay / baixoy
if( baixox!=0 ):
	print(x)
	print(y)
else 
  print("Nao tem solucao")


-- EXECUTION TIME:
0.191816
-- ERROR:
  File "/home/codebench/codes/1642/2449/main.py", line 23
    else 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:14:18) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d

x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d

y = cimay / baixoy
if( baixox!=0 ):
	print(x)
	print(y)
else 
  print("Nao tem solucao")


-- ERROR:
File "XXXX", line 23
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:14:25) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d

x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d

y = cimay / baixoy
if( baixox!=0 ):
	print(x)
	print(y)
else:
  print("Nao tem solucao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = cimax / baixox
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:14:28) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d

x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d

y = cimay / baixoy
if( baixox!=0 ):
	print(x)
	print(y)
else:
  print("Nao tem solucao")


-- EXECUTION TIME:
0.266644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 12, in <module>
    x = cimax / baixox
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:14:30) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d

x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d

y = cimay / baixoy
if( baixox!=0 ):
	print(x)
	print(y)
else:
  print("Nao tem solucao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = cimax / baixox
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:16:00) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")

x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if( baixoy == 0 ):
  print("Nao tem solucao")

y = cimay / baixoy
if( baixox!=0 ):
	print(x)
	print(y)


-- EXECUTION TIME:
0.195709
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 14, in <module>
    x = cimax / baixox
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:16:02) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")

x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if( baixoy == 0 ):
  print("Nao tem solucao")

y = cimay / baixoy
if( baixox!=0 ):
	print(x)
	print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    x = cimax / baixox
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:16:39) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")
  x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if( baixoy == 0 ):
  print("Nao tem solucao")
  y = cimay / baixoy
if( baixox!=0 ):
	print(x)
	print(y)


-- EXECUTION TIME:
0.139765
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 13, in <module>
    x = cimax / baixox
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:16:41) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")
  x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if( baixoy == 0 ):
  print("Nao tem solucao")
  y = cimay / baixoy
if( baixox!=0 ):
	print(x)
	print(y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    x = cimax / baixox
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:17:23) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")
else:
  x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if( baixoy == 0 ):
  print("Nao tem solucao")
else:
	y = cimay / baixoy
	
if( baixox!=0 ):
	print(x)
	print(y)


-- EXECUTION TIME:
0.123378
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:17:24) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")
else:
  x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if( baixoy == 0 ):
  print("Nao tem solucao")
else:
	y = cimay / baixoy
	
if( baixox!=0 ):
	print(x)
	print(y)


-- OUTPUT:
Nao tem solucao
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:17:35) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")
else:
  x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if( baixoy == 0 ):
  print("Nao tem solucao")
else:
	y = cimay / baixoy
	
if( baixox!=0 ):
	print(x)
	print(y)


-- OUTPUT:
Nao tem solucao
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:18:22) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")
else:
  x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if(baixox !=0 )
	y = cimay / baixoy
	
if( baixox!=0 ):
	print(x)
	print(y)


-- EXECUTION TIME:
0.147314
-- ERROR:
  File "/home/codebench/codes/1642/2449/main.py", line 20
    if(baixox !=0 )
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:18:23) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")
else:
  x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if(baixox !=0 )
	y = cimay / baixoy
	
if( baixox!=0 ):
	print(x)
	print(y)


-- ERROR:
File "XXXX", line 20
    if(baixox !=0 )
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:18:30) 
-- CODE:
a =  float(input())
b =  float(input()) 
c =  float(input())   
d =  float(input())   
e =  float(input())   
f =  float(input())   
# processamento de x

cimax = c*e - b*f 
baixox = a*e - b*d
if( baixox == 0 ):
  print("Nao tem solucao")
else:
  x = cimax / baixox

#processamento de y

cimay = a*f - c*d
baixoy = a*e - b*d
if(baixox !=0 ):
	y = cimay / baixoy
	
if( baixox!=0 ):
	print(x)
	print(y)


-- EXECUTION TIME:
0.187293
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
